crates/superui_flair_style/src/snapshots/superui_flair_style__tests__append_grand_children_after_initial_spawn.snap
---
source: crates/superui_flair_style/src/lib.rs
expression: scene_serializer
---
Scene(
  resources: {},
  entities: {
    4294967288: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967292),
        "superui_flair_style::components::NodeStyleData": NodeStyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "51928a2e-91ad-413c-a910-d02c6a716cc8",
          ),
          is_root: false,
          id: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::tests::GrandChild": GrandChild(),
      },
    ),
    4294967289: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967292),
        "superui_flair_style::components::NodeStyleData": NodeStyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "51928a2e-91ad-413c-a910-d02c6a716cc8",
          ),
          is_root: false,
          id: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::tests::GrandChild": GrandChild(),
      },
    ),
    4294967290: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967293),
        "superui_flair_style::components::NodeStyleData": NodeStyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "fe981062-17ce-46e4-999a-5a61ea8fe722",
          ),
          is_root: false,
          id: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::tests::GrandChild": GrandChild(),
      },
    ),
    4294967291: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967293),
        "superui_flair_style::components::NodeStyleData": NodeStyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "fe981062-17ce-46e4-999a-5a61ea8fe722",
          ),
          is_root: false,
          id: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::tests::GrandChild": GrandChild(),
      },
    ),
    4294967292: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967294),
        "bevy_ecs::hierarchy::Children": Children([
          4294967289,
          4294967288,
        ]),
        "superui_flair_style::components::NodeStyleData": NodeStyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "51928a2e-91ad-413c-a910-d02c6a716cc8",
          ),
          is_root: false,
          id: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "superui_flair_style::components::NodeStyleSheet": Block,
        "superui_flair_style::tests::Child": Child(),
      },
    ),
    4294967293: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967294),
        "bevy_ecs::hierarchy::Children": Children([
          4294967291,
          4294967290,
        ]),
        "superui_flair_style::components::NodeStyleData": NodeStyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "fe981062-17ce-46e4-999a-5a61ea8fe722",
          ),
          is_root: false,
          id: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::tests::Child": Child(),
      },
    ),
    4294967294: Entity(
      components: {
        "bevy_ecs::hierarchy::Children": Children([
          4294967293,
          4294967292,
        ]),
        "bevy_ecs::name::Name": "Root",
        "superui_flair_style::components::NodeStyleData": NodeStyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "fe981062-17ce-46e4-999a-5a61ea8fe722",
          ),
          is_root: true,
          id: Some("Root"),
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "superui_flair_style::components::NodeStyleSheet": StyleSheet(Uuid("fe981062-17ce-46e4-999a-5a61ea8fe722")),
      },
    ),
  },
)
