crates/superui_flair_style/src/snapshots/superui_flair_style__tests__custom_type_name.snap
---
source: crates/superui_flair_style/src/lib.rs
assertion_line: 572
expression: scene_serializer
---
Scene(
  resources: {},
  entities: {
    4294967294: Entity(
      components: {
        "superui_flair_style::components::NodeStyleData": NodeStyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "fe981062-17ce-46e4-999a-5a61ea8fe722",
          ),
          is_root: true,
          name: None,
          classes: [],
          attributes: {},
          type_name: Some("custom-type"),
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "superui_flair_style::components::NodeStyleSheet": StyleSheet(Uuid("fe981062-17ce-46e4-999a-5a61ea8fe722")),
        "superui_flair_style::tests::CustomType": CustomType(),
      },
    ),
  },
)
