crates/superui_flair_style/src/snapshots/superui_flair_style__tests__spawn_many_children_and_grandchildren.snap
---
source: crates/superui_flair_style/src/lib.rs
assertion_line: 784
expression: scene_serializer
---
Scene(
  resources: {},
  entities: {
    4294967285: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967288),
        "superui_flair_style::components::NodeStyleData": NodeStyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "51928a2e-91ad-413c-a910-d02c6a716cc8",
          ),
          is_root: false,
          name: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: None,
          previous_sibling: Some(4294967286),
        ),
        "superui_flair_style::tests::GrandChild": GrandChild(),
      },
    ),
    4294967286: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967288),
        "superui_flair_style::components::NodeStyleData": NodeStyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "51928a2e-91ad-413c-a910-d02c6a716cc8",
          ),
          is_root: false,
          name: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: Some(4294967285),
          previous_sibling: Some(4294967287),
        ),
        "superui_flair_style::tests::GrandChild": GrandChild(),
      },
    ),
    4294967287: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967288),
        "superui_flair_style::components::NodeStyleData": NodeStyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "51928a2e-91ad-413c-a910-d02c6a716cc8",
          ),
          is_root: false,
          name: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: Some(4294967286),
          previous_sibling: None,
        ),
        "superui_flair_style::tests::GrandChild": GrandChild(),
      },
    ),
    4294967288: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967294),
        "bevy_ecs::hierarchy::Children": Children([
          4294967287,
          4294967286,
          4294967285,
        ]),
        "superui_flair_style::components::NodeStyleData": NodeStyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "51928a2e-91ad-413c-a910-d02c6a716cc8",
          ),
          is_root: false,
          name: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "superui_flair_style::components::NodeStyleSheet": Block,
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: None,
          previous_sibling: Some(4294967289),
        ),
        "superui_flair_style::tests::Child": Child(),
      },
    ),
    4294967289: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967294),
        "superui_flair_style::components::NodeStyleData": NodeStyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "fe981062-17ce-46e4-999a-5a61ea8fe722",
          ),
          is_root: false,
          name: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: Some(4294967288),
          previous_sibling: Some(4294967293),
        ),
        "superui_flair_style::tests::Child": Child(),
      },
    ),
    4294967290: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967293),
        "superui_flair_style::components::NodeStyleData": NodeStyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "fe981062-17ce-46e4-999a-5a61ea8fe722",
          ),
          is_root: false,
          name: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: None,
          previous_sibling: Some(4294967291),
        ),
        "superui_flair_style::tests::GrandChild": GrandChild(),
      },
    ),
    4294967291: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967293),
        "superui_flair_style::components::NodeStyleData": NodeStyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "fe981062-17ce-46e4-999a-5a61ea8fe722",
          ),
          is_root: false,
          name: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: Some(4294967290),
          previous_sibling: Some(4294967292),
        ),
        "superui_flair_style::tests::GrandChild": GrandChild(),
      },
    ),
    4294967292: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967293),
        "superui_flair_style::components::NodeStyleData": NodeStyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "fe981062-17ce-46e4-999a-5a61ea8fe722",
          ),
          is_root: false,
          name: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: Some(4294967291),
          previous_sibling: None,
        ),
        "superui_flair_style::tests::GrandChild": GrandChild(),
      },
    ),
    4294967293: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967294),
        "bevy_ecs::hierarchy::Children": Children([
          4294967292,
          4294967291,
          4294967290,
        ]),
        "superui_flair_style::components::NodeStyleData": NodeStyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "fe981062-17ce-46e4-999a-5a61ea8fe722",
          ),
          is_root: false,
          name: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: Some(4294967289),
          previous_sibling: None,
        ),
        "superui_flair_style::tests::Child": Child(),
      },
    ),
    4294967294: Entity(
      components: {
        "bevy_ecs::hierarchy::Children": Children([
          4294967293,
          4294967289,
          4294967288,
        ]),
        "bevy_ecs::name::Name": "Root",
        "superui_flair_style::components::NodeStyleData": NodeStyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "fe981062-17ce-46e4-999a-5a61ea8fe722",
          ),
          is_root: true,
          name: Some("Root"),
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "superui_flair_style::components::NodeStyleSheet": StyleSheet(Uuid("fe981062-17ce-46e4-999a-5a61ea8fe722")),
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: None,
          previous_sibling: None,
        ),
      },
    ),
  },
)
