crates/superui_flair_style/src/snapshots/superui_flair_style__tests__spawn_with_pseudo_elements.snap
---
source: crates/superui_flair_style/src/lib.rs
expression: scene_serializer
---
Scene(
  resources: {},
  entities: {
    4294967286: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967291),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::components::PseudoElement": After,
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: None,
          previous_sibling: Some(4294967287),
        ),
      },
    ),
    4294967287: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967291),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::components::PseudoElement": Before,
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: Some(4294967286),
          previous_sibling: None,
        ),
      },
    ),
    4294967288: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967292),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: Some(4294967289),
          previous_sibling: Some(4294967290),
        ),
      },
    ),
    4294967289: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967292),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::components::PseudoElement": After,
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: None,
          previous_sibling: Some(4294967288),
        ),
      },
    ),
    4294967290: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967292),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::components::PseudoElement": Before,
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: Some(4294967288),
          previous_sibling: None,
        ),
      },
    ),
    4294967291: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967294),
        "bevy_ecs::hierarchy::Children": Children([
          4294967287,
          4294967286,
        ]),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: None,
          previous_sibling: Some(4294967292),
        ),
        "superui_flair_style::tests::Child": Child(),
      },
    ),
    4294967292: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967294),
        "bevy_ecs::hierarchy::Children": Children([
          4294967290,
          4294967288,
          4294967289,
        ]),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: Some(4294967291),
          previous_sibling: Some(4294967293),
        ),
        "superui_flair_style::tests::Child": Child(),
      },
    ),
    4294967293: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967294),
        "superui_flair_style::components::NodeStyleSheet": Inherited,
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: Some(4294967292),
          previous_sibling: None,
        ),
        "superui_flair_style::tests::Child": Child(),
      },
    ),
    4294967294: Entity(
      components: {
        "bevy_ecs::hierarchy::Children": Children([
          4294967293,
          4294967292,
          4294967291,
        ]),
        "bevy_ecs::name::Name": "Root",
        "superui_flair_style::components::NodeStyleSheet": StyleSheet(Uuid("fe981062-17ce-46e4-999a-5a61ea8fe722")),
        "superui_flair_style::components::Siblings": Siblings(
          next_sibling: None,
          previous_sibling: None,
        ),
      },
    ),
  },
)
